--- a/balanced_dl_classifier.ipynb
+++ b/balanced_dl_classifier.ipynb
@@ -1,6 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f0020741",
+   "metadata": {},
+   "source": [
+    "Balanced Deep Learning Text Classification for Age Group Prediction\n",
+    "This notebook implements a balanced deep learning approach to predict the age group of speakers based on their speech transcripts from the British National Corpus (BNC).\n",
+    "\n",
+    "\n",
+    "\n",
+    "Data Processing Pipeline\n",
+    "1. Data Loading and Exploration\n",
+    "Binary classification: Young (0-29) vs. Old (30+)\n",
+    "Multi-class classification: Young (0-29), Middle-Age (30-59), Senior (60+)\n",
+    "2. Text Processing\n",
+    "Extracts word tokens from XML corpus files\n",
+    "Combines tokens into full text documents for each speaker\n",
+    "\n",
+    "3. Data Balancing\n",
+    "\n",
+    "4. Data Preparation for Deep Learning\n",
+    "\n",
+    "\n",
+    "1. Custom RNN with Attention\n",
+    "Uses an LSTM-based recurrent neural network with an attention mechanism\n",
+    "2. Fine-tuned BERT Model\n",
+    "Implements BERT-based classification using the Hugging Face transformers library\n",
+    "\n",
+    "\n",
+    "RNN vs. BERT architectures\n",
+    "Binary vs. multi-class tasks\n",
+    "Visualizations to highlight the strengths and weaknesses of each approach\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b76efeec",
@@ -74,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "42f4161e",
    "metadata": {},
    "outputs": [
@@ -216,20 +250,7 @@
     "\n",
     "# Function to map BNC age ranges to binary categories (Young vs Old)\n",
     "def map_to_binary_age(age_range):\n",
-    "    \"\"\"\n",
-    "    Map BNC age ranges to binary categories:\n",
-    "    Young (0-29) vs Old (30+)\n",
     "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    age_range : str\n",
-    "        Age range from BNC metadata (e.g., '0_18', '19-29', '30_59', '60_plus')\n",
-    "        \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    str\n",
-    "        'Young' or 'Old' classification\n",
-    "    \"\"\"\n",
     "    if pd.isna(age_range) or age_range == 'Unknown':\n",
     "        return np.nan\n",
     "    \n",
@@ -473,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "23eb7a73",
    "metadata": {},
    "outputs": [
@@ -499,8 +520,6 @@
     }
    ],
    "source": [
-    "# Create a text corpus for each speaker\n",
-    "# Combine all words from each speaker into a single document\n",
     "\n",
     "# For binary classification\n",
     "binary_speaker_texts = []\n",
@@ -586,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "18a38117",
    "metadata": {},
    "outputs": [
@@ -647,9 +666,7 @@
     }
    ],
    "source": [
-    "# Create balanced datasets with 121 speakers per class\n",
-    "# For binary classification, we'll sample 121 speakers from each class (Young and Old)\n",
-    "# For multi-class, we'll ensure each class (Young, Middle-Age, Senior) has exactly 121 speakers\n",
+    "\n",
     "\n",
     "# Function to create balanced dataset\n",
     "def create_balanced_dataset(df, balanced_count=121):\n",
@@ -2202,49 +2219,6 @@
     "\n",
     "print(\"\\nModel Performance Comparison (Balanced Datasets):\")\n",
     "print(model_comparison)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3a10f220",
-   "metadata": {},
-   "source": [
-    "# Balanced Age Group Classification Analysis\n",
-    "\n",
-    "In this notebook, we've implemented deep learning classifiers for age group classification with balanced classes, where each age group has exactly 121 speakers. This approach addresses potential biases in the original dataset where the age groups were imbalanced:\n",
-    "\n",
-    "- Young: 299 speakers\n",
-    "- Middle-Age: 242 speakers\n",
-    "- Senior: 121 speakers\n",
-    "\n",
-    "By balancing the classes, we ensure that the models learn to distinguish between age groups based on linguistic features rather than exploiting the prevalence of certain age groups in the training data.\n",
-    "\n",
-    "## Key Findings\n",
-    "\n",
-    "1. **Binary Classification (Young vs. Old)**:\n",
-    "   - Both RNN and BERT models achieved comparable performance on the balanced binary classification task\n",
-    "   - The confusion matrices show more balanced predictions between classes compared to the unbalanced dataset\n",
-    "   - Class-specific metrics (precision, recall, F1-score) show more consistent performance across both classes\n",
-    "\n",
-    "2. **Multi-class Classification (Young, Middle-Age, Senior)**:\n",
-    "   - The balanced dataset led to improved classification of the \"Senior\" class, which was previously underrepresented\n",
-    "   - All three classes now have similar F1-scores, indicating more fair performance across age groups\n",
-    "   - The overall accuracy is lower than in binary classification, as expected with more classes\n",
-    "\n",
-    "3. **Model Comparison**:\n",
-    "   - RNN models are effective for capturing sequential patterns in language that correlate with age\n",
-    "   - BERT models leverage pre-trained language understanding to identify age-related linguistic features\n",
-    "   - The attention mechanism helps identify words and phrases most indicative of specific age groups\n",
-    "\n",
-    "## Implications\n",
-    "\n",
-    "Balancing the age classes provides several important advantages:\n",
-    "\n",
-    "1. **Fairness**: The models now treat each age group equally, avoiding biases toward majority classes\n",
-    "2. **Generalizability**: The balanced models are likely to perform more consistently on new data with different age distributions\n",
-    "3. **Interpretability**: By removing the confounding factor of class imbalance, insights about age-related language patterns are more reliable\n",
-    "\n",
-    "This balanced approach is particularly important for linguistic studies where we want to understand genuine age-related language differences rather than artifacts of sampling bias."
    ]
   }
  ],
