--- a/binary_age_classifier copy.ipynb
+++ b/binary_age_classifier copy.ipynb
@@ -5,22 +5,7 @@
    "id": "7043bc8d",
    "metadata": {},
    "source": [
-    "# Binary Age Group Classification Using Logistic Regression\n",
-    "\n",
-    "This notebook develops a logistic regression classifier to differentiate between two age groups in the BNC2014 corpus:\n",
-    "- **Young**: Speakers aged 0-29 years\n",
-    "- **Old**: Speakers aged 30+ years\n",
-    "\n",
-    "The analysis follows these steps:\n",
-    "1. Load the BNC2014 corpus data and speaker metadata\n",
-    "2. Process the corpus to extract speaker-level features\n",
-    "3. Create a binary age classification (young vs. old)\n",
-    "4. Split data into training (80%) and test (20%) sets\n",
-    "5. Train a logistic regression model \n",
-    "6. Evaluate model performance on the test set\n",
-    "7. Analyze the most informative features\n",
-    "\n",
-    "This analysis will help us understand the linguistic differences between age groups and what features are most predictive of a speaker's age group."
+    "#  Age Group Classification Using Logistic Regression\n"
    ]
   },
   {
@@ -1215,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "9b3269bb",
    "metadata": {},
    "outputs": [
@@ -1228,9 +1213,7 @@
     }
    ],
    "source": [
-    "# Train a logistic regression model\n",
-    "# We'll use L1 regularization (lasso) to increase feature sparsity\n",
-    "# which helps us identify the most important features\n",
+    "\n",
     "log_reg = LogisticRegression(\n",
     "    C=1.0,               # Regularization strength (inverse)\n",
     "    penalty='l1',        # L1 regularization\n",
@@ -1628,43 +1611,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fd6817b3",
-   "metadata": {},
-   "source": [
-    "## 10. Conclusion\n",
-    "\n",
-    "In this project, we developed a binary age classifier that categorizes speakers from the BNC2014 corpus into 'Young' (0-29 years) and 'Old' (30+ years) age groups. The classification relied on a combination of linguistic features and word usage patterns extracted from the corpus text.\n",
-    "\n",
-    "### Key Findings:\n",
-    "\n",
-    "1. **Model Performance:** The logistic regression model achieved [accuracy to be filled after running] on the test set, demonstrating that linguistic features can be predictive of age groups.\n",
-    "\n",
-    "2. **Distinctive Vocabulary:** The most informative features identified significant differences in word usage between age groups:\n",
-    "   - Words strongly associated with older speakers include more formal language and traditional expressions\n",
-    "   - Words associated with younger speakers tend to include more informal language, slang, and contemporary references\n",
-    "\n",
-    "3. **Linguistic Features:** Beyond vocabulary, several linguistic patterns showed strong correlation with age:\n",
-    "   - The use of certain syntactic structures, sentence lengths, and punctuation patterns varies by age group\n",
-    "   - Lexical diversity metrics showed discernible differences between the age groups\n",
-    "\n",
-    "### Limitations:\n",
-    "\n",
-    "1. The binary classification approach simplifies the complex spectrum of age groups\n",
-    "2. Cultural and educational factors may influence linguistic patterns beyond age\n",
-    "3. The corpus itself may have inherent biases in how speakers of different ages were sampled\n",
-    "\n",
-    "### Future Directions:\n",
-    "\n",
-    "1. Explore multi-class age classification with more granular age categories\n",
-    "2. Incorporate additional linguistic features, especially those related to syntactic complexity\n",
-    "3. Compare results across different corpora to assess the generalizability of the findings\n",
-    "4. Investigate the interaction between age and other demographic variables (gender, education, region)\n",
-    "\n",
-    "Overall, this analysis demonstrates that computational linguistic methods can effectively identify age-related patterns in language use, providing insights into how language varies across generations."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 96,
    "id": "1627b4f4",
@@ -1881,18 +1827,6 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8231c6a",
-   "metadata": {},
-   "source": [
-    "## 11. Results with Expanded Stopwords List\n",
-    "\n",
-    "We've now applied a much more extensive stopwords list that removes common English words, discourse markers, fillers, and BNC-specific tokens. This helps us focus on more distinctive and meaningful words that characterize the differences between age groups. \n",
-    "\n",
-    "The expanded list filters out more noise from the text data, so the most informative words we see now should be more representative of true age-related differences in language use, rather than general discourse patterns."
    ]
   },
   {
@@ -2195,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "33fc492b",
    "metadata": {},
    "outputs": [
@@ -2217,13 +2151,7 @@
     "import pandas as pd\n",
     "from matplotlib import cm\n",
     "\n",
-    "# Extract data from your existing analysis\n",
-    "# For demonstration, I'll use the code structure from your paste.txt\n",
     "\n",
-    "# Assuming these variables are already in your environment:\n",
-    "# word_importance, feature_names, X_train_tfidf, y_train\n",
-    "\n",
-    "# Get top words for each class (adjust the number of words as needed)\n",
     "num_top_words = 30\n",
     "\n",
     "# For words associated with 'Old' class (positive coefficients)\n",
