--- a/dl_classifier.ipynb
+++ b/dl_classifier.ipynb
@@ -1,6 +1,66 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0c5cb3d6",
+   "metadata": {},
+   "source": [
+    "Deep Learning Text Classification for Age Group Prediction\n",
+    "This notebook implements a deep learning approach to predict the age group of speakers based on their speech transcripts from the British National Corpus (BNC).\n",
+    "\n",
+    "Overview\n",
+    "The notebook builds classification models to predict a speaker's age group from their transcribed speech, exploring both binary (Young vs. Old) and multi-class (Young, Middle-Age, Senior) classification tasks.\n",
+    "\n",
+    "Data Processing Pipeline\n",
+    "1. Data Loading and Exploration\n",
+    "Loads BNC speaker metadata and corpus text data\n",
+    "Explores age range distribution in the dataset\n",
+    "Maps detailed age ranges to simplified categories:\n",
+    "Binary classification: Young (0-29) vs. Old (30+)\n",
+    "Multi-class classification: Young (0-29), Middle-Age (30-59), Senior (60+)\n",
+    "2. Text Processing\n",
+    "Extracts word tokens from XML corpus files\n",
+    "Combines tokens into full text documents for each speaker\n",
+    "Filters speakers with sufficient data (at least 50 words) and known age groups\n",
+    "Creates separate datasets for binary and multi-class classification tasks\n",
+    "3. Data Preparation for Deep Learning\n",
+    "Builds a custom tokenizer to convert text to numerical sequences\n",
+    "Creates PyTorch Dataset and DataLoader classes for efficient batch processing\n",
+    "Implements padding and collation functions to handle variable-length texts\n",
+    "Splits data into training and testing sets\n",
+    "Model Implementation\n",
+    "The notebook implements two types of deep learning models:\n",
+    "\n",
+    "1. Custom RNN with Attention\n",
+    "Uses an LSTM-based recurrent neural network with an attention mechanism\n",
+    "The attention layer helps the model focus on the most relevant parts of the text\n",
+    "Includes embedding layer, bidirectional LSTM, and dropout for regularization\n",
+    "2. Fine-tuned BERT Model\n",
+    "Implements BERT-based classification using the Hugging Face transformers library\n",
+    "Leverages pre-trained contextual embeddings for improved performance\n",
+    "Uses AdamW optimizer with a learning rate scheduler\n",
+    "Training and Evaluation\n",
+    "For each model type (RNN and BERT) and each classification task (binary and multi-class):\n",
+    "\n",
+    "Trains the model with early stopping based on validation accuracy\n",
+    "Evaluates performance using accuracy, classification reports, and confusion matrices\n",
+    "Visualizes training history (loss and accuracy curves)\n",
+    "Compares model performance across different approaches\n",
+    "Model Analysis\n",
+    "The notebook also includes:\n",
+    "\n",
+    "Visualization of attention weights to interpret which parts of text the model focuses on\n",
+    "Performance comparison between RNN and BERT models\n",
+    "Detailed classification reports showing precision, recall, and F1-scores\n",
+    "Key Components\n",
+    "Data processing: Handles XML parsing, speaker metadata, and text tokenization\n",
+    "Custom models: Implements attention-based RNN and fine-tunes BERT\n",
+    "Evaluation: Provides comprehensive performance metrics and visualizations\n",
+    "Interpretability: Includes attention visualization for model explainability\n",
+    "This notebook demonstrates a complete deep learning text classification pipeline, from raw data processing to model deployment and interpretatio"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b98dff12",
@@ -75,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "10a0b42a",
    "metadata": {},
    "outputs": [
